--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ body {
 
 /* Navbar menu */
 .nav-menu {
+  width: 100%;
   height: 3rem;
   background-color: var(--primary-dark-color);
   display: flex;
@@ -138,6 +139,35 @@ body {
 
 .nav-menu ul a:hover {
   color: var(--primary-hover-light-color);
+}
+
+/* Slider */
+.slider {
+  height: 400px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  background-color: var(--primary-bg-color);
+  overflow: hidden;
+  padding: 1rem 0;
+}
+
+.slider .arrow {
+  font-size: 2rem;
+  color: var(--primary-dark-color);
+  cursor: pointer;
+  padding: 0.5rem;
+  border-radius: 0.75rem;
+  background-color: var(--primary-hover-light-color);
+}
+
+.slider .bakery-image {
+  border-radius: 1rem;
+  width: 900px;
+  max-height: 100%;
+  object-position: center;
 }
 
 /* Main section(content) */
