--- a/style.css
+++ b/style.css
@@ -209,3 +209,99 @@ body {
   width: 40px;
   height: 40px;
 }
+
+/* Feedback pop-up */
+.feedback {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Transparent black background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.5s;
+}
+
+.feedback.active {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.feedback .red {
+  color: red;
+}
+
+.feedback .form-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  gap: 0.5rem;
+  width: 28%;
+}
+
+.feedback .form-content h2 {
+  text-transform: uppercase;
+}
+
+.feedback .form-content,
+.feedback .form-content .form {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.feedback .form-content .close-btn {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  background-color: var(--primary-hover-light-color);
+  border-radius: 50%;
+  font-size: 1.5rem;
+  cursor: pointer;
+  top: -30px;
+  right: -30px;
+}
+
+.feedback .form-content .form label {
+  margin-top: 0.5rem;
+}
+
+.feedback .form-content .form .form-input {
+  width: 100%;
+  height: 2rem;
+  margin-top: 0.25rem;
+  border: 1px solid #b0b0b0;
+  border-radius: 0.25rem;
+  outline: none;
+  padding: 0.25rem;
+}
+
+.feedback .form-content .form .form-textarea {
+  resize: none;
+  margin-bottom: 1rem;
+  border: 1px solid #b0b0b0;
+  border-radius: 0.15rem;
+  padding: 0.25rem;
+  outline: none;
+}
+
+.feedback .form-content .form .submit-btn {
+  padding: 0.25rem 1rem;
+  border: none;
+  background-color: var(--primary-dark-color);
+  color: #fff;
+  font-weight: 600;
+  font-size: 1.25rem;
+}
