--- a/style.css
+++ b/style.css
@@ -139,6 +139,12 @@ body {
   font-size: 1.25rem;
 }
 
+.nav-menu ul a.chosen,
+.main-content .leftblock a.chosen,
+.navbar a.chosen {
+  text-decoration: underline;
+}
+
 .nav-menu ul a:hover {
   color: var(--primary-hover-light-color);
 }
@@ -179,13 +185,20 @@ body {
 }
 
 /* Main section(content) */
-.content {
+.main {
   background-color: var(--primary-hover-light-color);
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* navbar */
 .navbar {
-  padding-left: 8rem;
+  position: relative;
+  left: 0;
   margin-top: 0.5rem;
   margin-bottom: 1.5rem;
 }
@@ -207,6 +220,7 @@ body {
 /* main-content */
 .main-content {
   display: flex;
+  padding-top: 2rem;
   align-items: flex-start;
   justify-content: center;
   gap: 2rem;
@@ -250,8 +264,6 @@ body {
 }
 
 .main-content .centerblock .catalog .product-card {
-  /* width: 300px; */
-  /* height: 400px; */
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -272,9 +284,22 @@ body {
   color: var(--primary-dark-text-color);
 }
 
+.main-content .centerblock .catalog .product-card .cake-title:hover {
+  color: var(--primary-dark-color);
+}
+
 .main-content .centerblock .catalog .product-card .cake-price {
   margin-bottom: 1rem;
   color: var(--primary-dark-text-color);
+}
+
+.main-content .centerblock .catalog .product-card .cake-price .icon {
+  margin-left: 10rem;
+  cursor: pointer;
+}
+
+.main-content .centerblock .catalog .product-card .cake-price .icon:hover {
+  color: var(--primary-dark-color);
 }
 
 .main-content .centerblock .catalog .product-card .pounds {
@@ -431,7 +456,7 @@ body {
   border-radius: 0.25rem;
   outline: none;
   padding: 0.4rem;
-  transition: 0.125s ease-in-out;
+  transition: all 0.125s ease-in-out;
 }
 
 .feedback .form-content .form .form-input::placeholder {
@@ -461,3 +486,93 @@ body {
   cursor: pointer;
 }
 
+/* Shipping and Payment second-level page */
+.shipping-and-payment-container {
+  padding: 3rem;
+  background-color: var(--primary-hover-light-color);
+}
+
+.shipping-and-payment-container .title {
+  margin-bottom: 2rem;
+  border-bottom: 2px solid #000;
+  padding-bottom: 2rem;
+}
+
+.shipping-and-payment-container .intro-greetings {
+  font-size: 1.25rem;
+  margin-bottom: 2rem;
+}
+
+.shipping-and-payment-container .subinfo-title {
+  text-decoration: underline;
+}
+
+.shipping-and-payment-container .intro-greetings .bakery-name {
+  font-style: italic;
+  font-weight: 600;
+}
+
+.shipping-and-payment-container .list {
+  margin: 1rem 2rem;
+}
+
+.shipping-and-payment-container .list li h4 {
+  font-size: 1.12rem;
+  margin-bottom: 0.5rem;
+}
+
+.shipping-and-payment-container .list li p {
+  margin-bottom: 0.5rem;
+}
+
+/* Contacts second-level page */
+.contacts-container {
+  padding: 3rem;
+  background-color: var(--primary-hover-light-color);
+}
+
+.contacts-container .title {
+  margin-bottom: 2rem;
+  padding-bottom: 2rem;
+  border-bottom: 2px solid #000;
+}
+
+.contacts-container .greetings {
+  font-size: 1.25rem;
+  margin-bottom: 2rem;
+}
+
+.contacts-container .subtitle {
+  text-decoration: underline;
+  margin: 1rem auto;
+}
+
+.contacts-container .address {
+  display: flex;
+  align-items: center;
+  /* justify-content: spac */
+}
+
+.contacts-container .address p {
+  margin-right: 5rem;
+}
+
+.contacts-container .address iframe {
+  width: 600px;
+  height: 300px;
+}
+
+.contacts-container .phone-num,
+.contacts-container .address,
+.contacts-container .hours {
+  font-size: 1.2rem;
+  line-height: 2rem;
+}
+
+/* Some media queries */
+
+@media (max-width: 1200px) {
+  .main-content .centerblock .catalog {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
