--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ body {
 
 /* Navbar menu */
 .nav-menu {
+  min-width: 980px;
   width: 100%;
   height: 3rem;
   background-color: var(--primary-dark-color);
@@ -151,6 +152,7 @@ body {
 
 /* Slider */
 .slider {
+  min-width: 980px;
   height: 400px;
   width: 100%;
   display: flex;
@@ -186,13 +188,8 @@ body {
 
 /* Main section(content) */
 .main {
+  min-width: 980px;
   background-color: var(--primary-hover-light-color);
-}
-
-.content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 /* navbar */
@@ -331,7 +328,8 @@ body {
 
 /* bakery story */
 .main-content .centerblock .bakery-story {
-  width: 1030px;
+  max-width: 1030px;
+  margin-right: 2rem;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
@@ -572,7 +570,24 @@ body {
 /* Some media queries */
 
 @media (max-width: 1200px) {
+  .main-content .leftblock {
+    margin-left: 4rem;
+  }
+
   .main-content .centerblock .catalog {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .main-content .centerblock .bakery-story {
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+    width: 100%;
+  }
+}
+
+@media (max-width: 400px) {
+  .main-content .centerblock .catalog {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
